@@ -1888,6 +1888,7 @@ class DLM_Reports {
 			const dateString   = moment(dateInput).format("YYYY-MM");
 
 			if (11 > month) {
+
 				if (dateString === prevLastDate) {
 
 					date = moment(dateString).format("MMMM, YYYY");
@@ -1908,11 +1909,28 @@ class DLM_Reports {
 
 			}
 
-		} else if ('undefined' !== plugin.chartType && 'months' === plugin.chartType) {
+		} else if ('undefined' !== plugin.chartType && 'days' === plugin.chartType) {
 
-			date = moment(dateInput).format("MMMM, YYYY");
+			
+			const year         = moment(dateInput).year();
+			const day          = moment(dateInput).day();
+			const dayMonth	   = moment(dateInput).format("MMMM");
+			const nextDayMonth = moment(dateInput).day(day + 1).format("MMMM");
+			const lastDate     = dlmReportsInstance.dates.downloads.end_date;
+			const prevLastDate = moment(lastDate).day(moment(lastDate).day() - 1).format("MMMM Do");
+
+			if( moment(dateInput).format("MMMM Do") === moment(lastDate).format("MMMM Do") || moment(dateInput).format("MMMM Do") === prevLastDate){
+				date = moment(dateInput).format("MMMM Do, YYYY");
+			}else{
+				if( dayMonth === nextDayMonth){
+					date = moment(dateInput).format("MMMM Do") + ' - ' + moment(dateInput).day(day + 1).format("Do") + moment(dateInput).format(", YYYY");
+				}else{
+					date = moment(dateInput).format("MMM Do") + ' - ' + moment(dateInput).day(day + 1).format("MMM Do") + moment(dateInput).format(", YYYY");
+				}
+			}
+
 		} else {
-
+	
 			date = moment(dateInput).format("MMMM Do, YY");
 		}
 
